--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -32,6 +32,13 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , containers
+    , servant-server
+    , text
+    , time
+    , wai
+    , warp
   default-language: Haskell2010
 
 executable haskell-news-api-exe
@@ -43,7 +50,14 @@ executable haskell-news-api-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , containers
     , haskell-news-api
+    , servant-server
+    , text
+    , time
+    , wai
+    , warp
   default-language: Haskell2010
 
 test-suite haskell-news-api-test
@@ -56,5 +70,12 @@ test-suite haskell-news-api-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , containers
     , haskell-news-api
+    , servant-server
+    , text
+    , time
+    , wai
+    , warp
   default-language: Haskell2010
