cabal file updatedd: new modules added

--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -25,6 +25,11 @@ source-repository head
 
 library
   exposed-modules:
+      API.Entities.Category
+      API.Entities.Image
+      API.Entities.News
+      API.Entities.User
+      DB
       Lib
   other-modules:
       Paths_haskell_news_api
