added Handlers.Database module with Postgres handler

--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -38,6 +38,7 @@ library
       Entities.Image
       Entities.News
       Entities.User
+      Handlers.Database
       Main
   other-modules:
       Paths_haskell_news_api
