brought Effects.Logger module from my Bot project

--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -35,6 +35,7 @@ library
       App.Error
       App.Monad
       DB
+      Effects.Log
       Entities.Category
       Entities.Image
       Entities.News
