--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -34,6 +34,7 @@ library
       App.Env
       App.Error
       App.Monad
+      Data.Text.Extended
       DB
       Effects.Log
       Entities.Category
