edded Effects.Config module with MonadConfig

--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -36,6 +36,7 @@ library
       App.Monad
       Data.Text.Extended
       DB
+      Effects.Config
       Effects.Database
       Effects.Log
       Entities.Category
