moved Authentication related stuff to API.Protected module

--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -29,6 +29,7 @@ library
       API.Categories
       API.Images
       API.News
+      API.Protected
       API.Users
       App.Config
       App.Env
