--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.7.
+-- This file has been generated from package.yaml by hpack version 0.35.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -28,6 +28,7 @@ library
       API
       API.Modifiers.Paginated
       API.Modifiers.Protected
+      API.Modifiers.Sorted
       API.Routes.Categories
       API.Routes.Images
       API.Routes.News
