moved Beam related stuff from API.Modifiers.Sortable to separate module

--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       API
+      API.Modifiers.Beam.Sortable
       API.Modifiers.Internal
       API.Modifiers.Paginated
       API.Modifiers.Protected
