moved `symbolText` and `symbolCIText` to new GHC.TypeLits.Extended module

--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -48,6 +48,7 @@ library
       Entities.Image
       Entities.News
       Entities.User
+      GHC.TypeLits.Extended
       Handlers.Database
       Handlers.Logger
       Handlers.Logger.File
