split API.Modifiers.Internal into three modules

--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -28,6 +28,9 @@ library
       API
       API.Modifiers.Beam.Sortable
       API.Modifiers.Internal
+      API.Modifiers.Internal.Beam
+      API.Modifiers.Internal.PolyKinds
+      API.Modifiers.Internal.Tagged
       API.Modifiers.Paginated
       API.Modifiers.Protected
       API.Modifiers.Sortable
