--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.1.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -26,9 +26,9 @@ source-repository head
 library
   exposed-modules:
       API
+      API.Modifiers.Beam.Internal
       API.Modifiers.Beam.Sortable
       API.Modifiers.Internal
-      API.Modifiers.Internal.Beam
       API.Modifiers.Internal.PolyKinds
       API.Modifiers.Internal.Tagged
       API.Modifiers.Paginated
