--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -80,6 +80,7 @@ library
     , random
     , servant
     , servant-server
+    , tagged
     , text
     , time
     , wai
@@ -110,6 +111,7 @@ executable haskell-news-api-exe
     , random
     , servant
     , servant-server
+    , tagged
     , text
     , time
     , wai
@@ -141,6 +143,7 @@ test-suite haskell-news-api-test
     , random
     , servant
     , servant-server
+    , tagged
     , text
     , time
     , wai
