--- a/haskell-news-api.cabal
+++ b/haskell-news-api.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -43,6 +43,7 @@ library
       App.Config
       App.Env
       App.Error
+      App.Main
       App.Monad
       Data.Text.Extended
       DB
@@ -59,7 +60,6 @@ library
       Handlers.Logger.File
       Handlers.Logger.Internal
       Handlers.Logger.StdOut
-      Main
   other-modules:
       Paths_haskell_news_api
   hs-source-dirs:
